--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
   "overrides": {
     "tree-sitter-vue": {
       "nan": "^2.22.2"
-    }
+    },
+    "cross-spawn": "^7.0.3",
+    "postcss": "^8.4.31",
+    "webpack-dev-server": "^5.2.1"
   }
 }
